# GENIE-Sponsored-Projects

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.nf  nextflow.config  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: monitor.yml
geniesp/: __main__.py  bpc_config.py  bpc_redcap_export_mapping.py  config.py  extract.py  loads.py  metafiles.py  new_redcap_export_mapping.py  run_bpc.py  runner.py  sp_config.py  sp_redcap_export_mapping.py  transforms.py  utils.py
scripts/: config.yaml  test_validate.py  validate_map.py
validation/: config.yaml  validate_map.py
