[metadata]
name = geniesp
version = attr: geniesp.__version__
description = Export cBioPortal files for BPC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/GENIE-Sponsored-Projects
author = Thomas Yu
author_email = thomas.yu@sagebionetworks.org
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/Sage-Bionetworks/GENIE-Sponsored-Projects/issues
    Source Code = https://github.com/Sage-Bionetworks/GENIE-Sponsored-Projects

[options]
packages = find:
install_requires =
    synapseclient>=2.5.1
    aacrgenie>=12.5.0
    pandas>=1.0
python_requires = >=3.6, <3.10
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    geniesp = geniesp.__main__:main

[flake8]
max-line-length = 88
ignore =
    # space before : (needed for how black formats slicing)
    E203